# Laboratorio

./: CMakeLists.txt  README.md
include/: MessaggioNonValidoException.h  chat.h  messaggio.h  registrochat.h  registroutenti.h  utente.h
src/: chat.cpp  main.cpp  messaggio.cpp  registrochat.cpp  registroutenti.cpp  utente.cpp
test/: test_chat.cpp  test_eccezione.cpp  test_messaggio.cpp  test_registrochat.cpp  test_registroutenti.cpp  test_utente.cpp
